--- a/sysrepo/vagrant/Vagrantfile
+++ b/sysrepo/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 
 Vagrant.configure("2") do |config|
-  config.vm.define "sysrepo"
-  config.vm.box = "fedora/32-cloud-base"
+  config.vm.define "router"
+  config.vm.box = "fedora/33-cloud-base"
   config.vm.provider :libvirt do |libvirt|
     libvirt.cpus = 4
     libvirt.memory = 2048
